--- a/jasmine-testing-exercises/tip-pool/index.html
+++ b/jasmine-testing-exercises/tip-pool/index.html
@@ -88,7 +88,9 @@
 <script 
   src= "https://unpkg.com/jasmine-core@4.1.0/lib/jasmine-core/boot1.js"></script>
 
+<script src="payments.test.js"></script> 
 <script src="servers.test.js"></script> 
+<script src="helper.test.js"></script> 
 
 <!-- end of Jasmine tests -->
 
